I added command to create new user and exposed it via endpoint: POST /api/v1/users
