# Samples/Sample.Web.API/Web.API.Services/Users/Queries/GetUsers/GetUsersQuery.cs
@@ -1,4 +1,7 @@
-﻿using System.Threading.Tasks;
+﻿using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Threading.Tasks;
+using Newtonsoft.Json;
 using Synergy.Samples.Web.API.Services.Infrastructure.Annotations;
 using Synergy.Samples.Web.API.Services.Infrastructure.Queries;
 
@@ -9,18 +12,22 @@ namespace Synergy.Samples.Web.API.Services.Users.Queries.GetUsers
     [CreatedImplicitly]
     public class GetUsersQueryHandler : IGetUsersQueryHandler
     {
-        public GetUsersQueryHandler() { }
-
         public async Task<GetUsersQueryResult> Handle(GetUsersQuery query)
         {
             return new GetUsersQueryResult();
         }
     }
 
-    public interface IGetUsersQueryHandler:IQueryHandler<GetUsersQuery, GetUsersQueryResult> { }
+    public interface IGetUsersQueryHandler : IQueryHandler<GetUsersQuery, GetUsersQueryResult> { }
 
     public class GetUsersQueryResult
     {
-        public GetUsersQueryResult() { }
+        [JsonProperty("users")]
+        public ReadOnlyCollection<UserReadModel> Users { get; }
+
+        public GetUsersQueryResult()
+        {
+            Users = new ReadOnlyCollection<UserReadModel>(new List<UserReadModel>());
+        }
     }
 }
